# superensino

./: README.md  pyproject.toml  requirements.txt
docs/: superensino.postman_collection.json
exercicio/: admin.py  models.py  serializers.py  urls.py  views.py
exercicio/migrations/: 0001_initial.py  0002_userestatistica_ues_aproveitamento_and_more.py
exercicio/tests/: test_models.py  test_views.py
static/exercicio/js/: exercicio.js
superensino/: settings.py  urls.py
